--- a/settings.html
+++ b/settings.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Settings</title>
+  <title>Settings Screen</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif; 
+      font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #1b1b2f, #162447, #1f4068);
       height: 100vh;
-      display: flex; 
+      display: flex;
       justify-content: center;
       align-items: center;
       color: white;
@@ -25,50 +25,33 @@
       max-width: 600px;
     }
     h1 { margin-bottom: 20px; }
-    label {
-      display: block;
-      margin: 15px 0 5px;
+    ul {
       text-align: left;
+      margin-top: 20px;
+      line-height: 1.8;
     }
-    input[type="range"] {
-      width: 100%;
-    }
-    select, button {
-      padding: 10px;
-      width: 100%;
-      margin-top: 10px;
-      border-radius: 8px;
-      border: none;
+    .back-btn {
+      margin-top: 30px;
+      padding: 10px 20px;
       background: #1f4068;
       color: white;
-      font-size: 16px;
+      border: none;
+      border-radius: 8px;
       cursor: pointer;
       transition: 0.3s;
     }
-    button:hover { background: #e43f5a; transform: scale(1.05); }
+    .back-btn:hover { background: #e43f5a; transform: scale(1.05); }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>⚙️ Settings</h1>
-    <label for="volume">Volume</label>
-    <input type="range" id="volume" min="0" max="100" value="70">
-
-    <label for="difficulty">Difficulty</label>
-    <select id="difficulty">
-      <option>Easy</option>
-      <option selected>Normal</option>
-      <option>Hard</option>
-    </select>
-
-    <label for="language">Language</label>
-    <select id="language">
-      <option>English</option>
-      <option>Spanish</option>
-      <option>French</option>
-    </select>
-
-    <button onclick="window.location.href='index.html'">⬅ Back to Main Menu</button>
+    <h1>⚙️ Settings Screen</h1>
+    <ul>
+      <li><strong>Performance mode</strong> — Allows the user to disable some functions for smoother gameplay.</li>
+      <li><strong>Audio button</strong> — Opens the audio settings screen.</li>
+      <li><strong>Audio slider</strong> — Lets the user adjust the game’s volume.</li>
+    </ul>
+    <button class="back-btn" onclick="window.location.href='index.html'">⬅ Back to Main Menu</button>
   </div>
 </body>
 </html>
