--- a/saves.html
+++ b/saves.html
@@ -6,52 +6,47 @@
   <title>Game Saves</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1b1b2f, #162447, #1f4068); 
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-align: center;
+      margin: 0; font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #1b1b2f, #162447, #1f4068);
+      height: 100vh; display: flex; justify-content: center; align-items: center;
+      color: white; text-align: center;
     }
     .container {
-      background: rgba(0, 0, 0, 0.4);
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
-      width: 80%;
-      max-width: 600px;
+      background: rgba(0,0,0,0.4); padding: 40px;
+      border-radius: 15px; box-shadow: 0 0 20px rgba(0,0,0,0.6);
+      width: 80%; max-width: 600px;
     }
-    h1 { margin-bottom: 20px; }
-    ul {
-      text-align: left;
-      margin-top: 20px;
-      line-height: 1.8;
-    }
-    .back-btn {
-      margin-top: 30px;
-      padding: 10px 20px;
-      background: #1f4068;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+    select, button {
+      margin: 10px; padding: 10px 20px; border-radius: 8px; border: none;
+      background: #1f4068; color: white; cursor: pointer;
       transition: 0.3s;
     }
-    .back-btn:hover { background: #e43f5a; transform: scale(1.05); }
+    button:hover, select:hover { background: #e43f5a; transform: scale(1.05); }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>💾 Save File Screen</h1>
-    <ul>
-      <li><strong>Change save file button</strong> — Allows the user to switch between different save files.</li>
-      <li><strong>Load button</strong> — Loads the selected save file and continues the game.</li>
-      <li><strong>Return button</strong> — Takes the user back to the main menu.</li>
-    </ul>
-    <button class="back-btn" onclick="window.location.href='index.html'">⬅ Back to Main Menu</button>
+    <h1>💾 Save Files</h1>
+    <p>Select a save file:</p>
+    <select id="saveSelect">
+      <option>File 1 – The Awakening</option>
+      <option>File 2 – Into the Shadows</option>
+      <option>File 3 – Rise of the Hero</option>
+    </select>
+    <div>
+      <button onclick="changeFile()">🔄 Change File</button>
+      <button onclick="loadFile()">▶ Load</button>
+      <button onclick="window.location.href='index.html'">⬅ Back to Main Menu</button>
+    </div>
   </div>
+
+  <script>
+    function changeFile() {
+      alert("Switched to: " + document.getElementById("saveSelect").value);
+    }
+    function loadFile() {
+      alert("Loaded: " + document.getElementById("saveSelect").value);
+    }
+  </script>
 </body>
 </html>
