--- a/character.html
+++ b/character.html
@@ -5,53 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Character Screen</title>
   <style>
-    body { 
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
+    body {
+      margin: 0; font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #1b1b2f, #162447, #1f4068);
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-align: center;
+      height: 100vh; display: flex; justify-content: center; align-items: center;
+      color: white; text-align: center;
     }
     .container {
-      background: rgba(0, 0, 0, 0.4);
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
-      width: 80%;
-      max-width: 600px;
+      background: rgba(0,0,0,0.4); padding: 40px;
+      border-radius: 15px; box-shadow: 0 0 20px rgba(0,0,0,0.6);
+      width: 80%; max-width: 600px;
     }
-    h1 { margin-bottom: 20px; }
-    ul {
-      text-align: left;
-      margin-top: 20px;
-      line-height: 1.8;
-    }
-    .back-btn {
-      margin-top: 30px;
-      padding: 10px 20px;
-      background: #1f4068;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+    select, button {
+      margin: 10px; padding: 10px 20px; border-radius: 8px; border: none;
+      background: #1f4068; color: white; cursor: pointer;
       transition: 0.3s;
     }
-    .back-btn:hover { background: #e43f5a; transform: scale(1.05); }
+    button:hover, select:hover { background: #e43f5a; transform: scale(1.05); }
+    #charInfo { margin-top: 20px; text-align: left; }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🧙 Character Index Screen</h1>
-    <ul>
-      <li><strong>Character Files</strong> — Each character has their own interactable file which displays information about that character.</li>
-      <li><strong>Drop-down menu</strong> — Expands the file to show detailed character info.</li>
-      <li><strong>Return button</strong> — A back-to-menu button to navigate the user back to the main menu.</li>
-    </ul>
-    <button class="back-btn" onclick="window.location.href='index.html'">⬅ Back to Main Menu</button>
-  </div>
-</body>
-</html>
+    <h1>🧙 Character Index</h1>
+    <select id="charSelect" onchange="showCharacter()">
+      <option value="arion">Arion the Brave</option>
+      <option value="lyra">Lyra the
